--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 	<div class="container pt-5 mt-5 shadow p-5 mb-5 bg-white rounded">
 		<div class="text-center">
 		<h1>EDMSound</h1>
+		<br>
+		<br>
 		</div>
 		<p>
 			<b>Abstract</b> 
@@ -49,14 +51,23 @@
 			</thead>
 			<tbody>
             <tr>
-			<td style="text-align: center"><b>EDM-complex</b></td>
-			<td style="text-align: center"><audio controls="controls" style="width: 140px;"><source src="audios/sc09/sc09_0.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-			<td style="text-align: center"><audio controls="controls" style="width: 140px;"><source src="audios/sc09/sc09_3.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-			<td style="text-align: center"><audio controls="controls" style="width: 140px;"><source src="audios/sc09/sc09_5.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-			<td style="text-align: center"><audio controls="controls" style="width: 140px;"><source src="audios/sc09/sc09_6.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-			<td style="text-align: center"><audio controls="controls" style="width: 140px;"><source src="audios/sc09/sc09_7.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-			<td style="text-align: center"><audio controls="controls" style="width: 140px;"><source src="audios/sc09/sc09_8.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+			<td style="text-align: center"><b>Groun Truth</b></td>
+			<td style="text-align: center"><audio controls="controls" style="width: 140px;"><source src="audios/sc09/sc09_0_gt.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+			<td style="text-align: center"><audio controls="controls" style="width: 140px;"><source src="audios/sc09/sc09_3_gt.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+			<td style="text-align: center"><audio controls="controls" style="width: 140px;"><source src="audios/sc09/sc09_5_gt.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+			<td style="text-align: center"><audio controls="controls" style="width: 140px;"><source src="audios/sc09/sc09_6_gt.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+			<td style="text-align: center"><audio controls="controls" style="width: 140px;"><source src="audios/sc09/sc09_7_gt.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+			<td style="text-align: center"><audio controls="controls" style="width: 140px;"><source src="audios/sc09/sc09_8_gt.wav" autoplay/>Your browser does not support the audio element.</audio></td>
 			</tr>
+			<tr>
+				<td style="text-align: center"><b>EDMSound</b></td>
+				<td style="text-align: center"><audio controls="controls" style="width: 140px;"><source src="audios/sc09/sc09_0.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: center"><audio controls="controls" style="width: 140px;"><source src="audios/sc09/sc09_3.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: center"><audio controls="controls" style="width: 140px;"><source src="audios/sc09/sc09_5.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: center"><audio controls="controls" style="width: 140px;"><source src="audios/sc09/sc09_6.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: center"><audio controls="controls" style="width: 140px;"><source src="audios/sc09/sc09_7.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				<td style="text-align: center"><audio controls="controls" style="width: 140px;"><source src="audios/sc09/sc09_8.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+				</tr>
 			</tbody>
 			</table>
 		</div>
@@ -69,9 +80,9 @@
 			<table class="table table-hover pt-2">
 			<thead>
 			<tr>
-			<th style="text-align: center; font-size: var(--dcaset-tab-font-size)">Model</th>
+			<th style="text-align: center; font-size: var(--dcaset-tab-font-size)">Category</th>
 			<th style="text-align: center; font-size: var(--dcaset-tab-font-size)">Ground Truth</th>
-			<th style="text-align: center; font-size: var(--dcaset-tab-font-size)" colspan="2">EDM-complex</th>
+			<th style="text-align: center; font-size: var(--dcaset-tab-font-size)" colspan="2">EDMSound</th>
 			</tr>
 			</thead>
 			<tbody>
