--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		</p>
 
 <div class="container pt-5 mt-5 shadow p-5 mb-5 bg-white rounded">
-	<h2 id="evaluation results" style="text-align: center;">Unconditional Generation Results on SC09</h2>
+	<h2 id="evaluation results" style="text-align: center;">Unconditional Generation Results on SC09*</h2>
 		<div class="table-responsive pt-3">
 			<table class="table table-hover pt-2">
 			<thead>
@@ -70,6 +70,7 @@
 				</tr>
 			</tbody>
 			</table>
+			* Note: we generate the above samples using EDMSound unconditionally and manually label them for the table.
 		</div>
 </div>
 
