audio-image pair test commit

--- a/index.html
+++ b/index.html
@@ -137,6 +137,65 @@
 		</div>
 </div>
 
+<div class="row">
+	<div class="pair">
+		<img src="images/edm_2_gen.png" alt="Image 1">
+		<audio controls>
+			<source src="audios/dcase7/129.wav" type="audio/mpeg">
+			Your browser does not support the audio element.
+		</audio>
+	</div>
+	<div class="pair">
+		<img src="images/edm_2_gen.png" alt="Image 2">
+		<audio controls>
+			<source src="audios/dcase7/129.wav" type="audio/mpeg">
+			Your browser does not support the audio element.
+		</audio>
+	</div>
+	<div class="pair">
+		<img src="images/edm_2_gen.png" alt="Image 3">
+		<audio controls>
+			<source src="audios/dcase7/129.wav" type="audio/mpeg">
+			Your browser does not support the audio element.
+		</audio>
+	</div>
+</div>
+
+<!-- <div class="row">
+	<div class="pair">
+		<img src="image4.jpg" alt="Image 4">
+		<audio controls>
+			<source src="audio4.mp3" type="audio/mpeg">
+			Your browser does not support the audio element.
+		</audio>
+	</div>
+	<div class="pair">
+		<img src="image5.jpg" alt="Image 5">
+		<audio controls>
+			<source src="audio5.mp3" type="audio/mpeg">
+			Your browser does not support the audio element.
+		</audio>
+	</div>
+	<div class="pair">
+		<img src="image6.jpg" alt="Image 6">
+		<audio controls>
+			<source src="audio6.mp3" type="audio/mpeg">
+			Your browser does not support the audio element.
+		</audio>
+	</div>
+</div> -->
+
+<!-- Add more rows as needed -->
+</body>
+</html>
+In this example, we have audio-image pairs organized into rows, with each row containing three pairs. The flex property is used to make each .pair div occupy 30% of the row's width with spacing. You can adjust the percentage and add more rows with audio-image pairs as needed.
+
+
+
+
+
+
+
  
 </article>
 </main>
