audio-image pair test commit

--- a/index.html
+++ b/index.html
@@ -10,22 +10,6 @@
 	<link rel="stylesheet" href="css/custom.css">
 	<link rel="stylesheet" href="css/normalize.css">
 
-	<style>
-        .row {
-            display: flex;
-            justify-content: space-between;
-        }
-    
-
-        .pair {
-            text-align: center;
-            margin: 10px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-    </style>
-
 	<title>EDMSound</title>
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 
@@ -154,10 +138,30 @@
 </div>
 
 <div class="container pt-5 mt-5 shadow p-5 mb-5 bg-white rounded">
+	<style>
+        .row {
+            display: flex;
+            justify-content: space-between;
+        }
+    
+
+        .pair {
+            text-align: center;
+            margin: 10px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+    </style>
 	<h2 id="evaluation results" style="text-align: center;">Matched Pairs from EDMSound</h2>
 		<div class="row">
 			<div class="pair">
+				<img src="images/edm_2_gen.png" alt="Image 1", style="width: 150px; height: 50px;">
 				<img src="images/edm_2_gen.png" alt="Image 1", style="width: 100px; height: 50px;">
+				<audio controls>
+					<source src="audios/dcase7/129.wav" type="audio/mpeg">
+					Your browser does not support the audio element.
+				</audio>
 				<audio controls>
 					<source src="audios/dcase7/129.wav" type="audio/mpeg">
 					Your browser does not support the audio element.
@@ -165,6 +169,11 @@
 			</div>
 			<div class="pair">
 				<img src="images/edm_2_gen.png" alt="Image 1", style="width: 100px; height: 50px;">
+				<img src="images/edm_2_gen.png" alt="Image 1", style="width: 100px; height: 50px;">
+				<audio controls>
+					<source src="audios/dcase7/129.wav" type="audio/mpeg">
+					Your browser does not support the audio element.
+				</audio>
 				<audio controls>
 					<source src="audios/dcase7/129.wav" type="audio/mpeg">
 					Your browser does not support the audio element.
@@ -172,6 +181,11 @@
 			</div>
 			<div class="pair">
 				<img src="images/edm_2_gen.png" alt="Image 1", style="width: 100px; height: 50px;">
+				<img src="images/edm_2_gen.png" alt="Image 1", style="width: 100px; height: 50px;">
+				<audio controls>
+					<source src="audios/dcase7/129.wav" type="audio/mpeg">
+					Your browser does not support the audio element.
+				</audio>
 				<audio controls>
 					<source src="audios/dcase7/129.wav" type="audio/mpeg">
 					Your browser does not support the audio element.
