--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
             display: flex;
             justify-content: space-between;
             align-items: center; /* Vertically center the content */
+			flex-direction: row;
         }
 
         .pair {
