audio-image pair test commit

--- a/index.html
+++ b/index.html
@@ -149,6 +149,8 @@
         .pair {
             text-align: center;
             margin: 10px;
+			display: flex;
+			flex-direction: column;
         }
 
         img {
