modified demo page

--- a/index.html
+++ b/index.html
@@ -168,23 +168,23 @@
         <div class="row">
             <h4 id="evaluation results" style="text-align: left;">Generated audio samples</h4>
             <div class="pair">
-                <img src="1.png" alt="Image 1">
+                <img src="images/edm_2_gen.png" alt="Image 1">
                 <audio controls>
-                    <source src="audios/dcase7/129.wav" type="audio/mpeg">
+                    <source src="audios/copy_detection/edm_2_gen.wav" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
             </div>
             <div class="pair">
-                <img src="1.png" alt="Image 2">
+                <img src="images/edm_117_gen.png" alt="Image 2">
                 <audio controls>
-                    <source src="audios/dcase7/129.wav" type="audio/mpeg">
+                    <source src="audios/copy_detection/edm_117_gen.wav" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
             </div>
             <div class="pair">
-                <img src="1.png" alt="Image 3">
+                <img src="images/edm_377_gen.png" alt="Image 3">
                 <audio controls>
-                    <source src="audios/dcase7/129.wav" type="audio/mpeg">
+                    <source src="audios/copy_detection/edm_377_gen.wav" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
             </div>
@@ -193,23 +193,23 @@
         <div class="row">
             <h4 id="evaluation results" style="text-align: left;">Top-1 matches from training samples</h4>
             <div class="pair">
-                <img src="1.png" alt="Image 1">
+                <img src="images/edm_2_train.png" alt="Image 1">
                 <audio controls>
-                    <source src="audios/dcase7/129.wav" type="audio/mpeg">
+                    <source src="audios/copy_detection/edm_2_train.wav" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
             </div>
             <div class="pair">
-                <img src="1.png" alt="Image 2">
+                <img src="images/edm_117_train.png" alt="Image 2">
                 <audio controls>
-                    <source src="audios/dcase7/129.wav" type="audio/mpeg">
+                    <source src="audios/copy_detection/edm_117_train.wav" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
             </div>
             <div class="pair">
-                <img src="1.png" alt="Image 3">
+                <img src="images/edm_377_train.png" alt="Image 3">
                 <audio controls>
-                    <source src="audios/dcase7/129.wav" type="audio/mpeg">
+                    <source src="audios/copy_detection/edm_377_train.wav" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
             </div>
@@ -223,23 +223,23 @@
         <div class="row">
             <h4 id="evaluation results" style="text-align: left;">Generated audio samples</h4>
             <div class="pair">
-                <img src="1.png" alt="Image 1">
+                <img src="images/sb_67_gen.png" alt="Image 1">
                 <audio controls>
-                    <source src="audios/dcase7/129.wav" type="audio/mpeg">
+                    <source src="audios/copy_detection/sb_67_gen.wav" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
             </div>
             <div class="pair">
-                <img src="1.png" alt="Image 2">
+                <img src="images/sb_214_gen.png" alt="Image 2">
                 <audio controls>
-                    <source src="audios/dcase7/129.wav" type="audio/mpeg">
+                    <source src="audios/copy_detection/sb_214_gen.wav" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
             </div>
             <div class="pair">
-                <img src="1.png" alt="Image 3">
+                <img src="images/sb_600_gen.png" alt="Image 3">
                 <audio controls>
-                    <source src="audios/dcase7/129.wav" type="audio/mpeg">
+                    <source src="audios/copy_detection/sb_600_gen.wav" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
             </div>
@@ -248,23 +248,23 @@
         <div class="row">
             <h4 id="evaluation results" style="text-align: left;">Top-1 matches from training samples</h4>
             <div class="pair">
-                <img src="1.png" alt="Image 1">
+                <img src="images/sb_67_train.png" alt="Image 1">
                 <audio controls>
-                    <source src="audios/dcase7/129.wav" type="audio/mpeg">
+                    <source src="audios/copy_detection/sb_67_train.wav" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
             </div>
             <div class="pair">
-                <img src="1.png" alt="Image 2">
+                <img src="images/sb_214_train.png" alt="Image 2">
                 <audio controls>
-                    <source src="audios/dcase7/129.wav" type="audio/mpeg">
+                    <source src="audios/copy_detection/sb_214_train.wav" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
             </div>
             <div class="pair">
-                <img src="1.png" alt="Image 3">
+                <img src="images/sb_600_train.png" alt="Image 3">
                 <audio controls>
-                    <source src="audios/dcase7/129.wav" type="audio/mpeg">
+                    <source src="audios/copy_detection/sb_600_train.wav" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
             </div>
@@ -278,23 +278,23 @@
         <div class="row">
             <h4 id="evaluation results" style="text-align: left;">Generated audio samples</h4>
             <div class="pair">
-                <img src="1.png" alt="Image 1">
+                <img src="images/yi_122_gen.png" alt="Image 1">
                 <audio controls>
-                    <source src="audios/dcase7/129.wav" type="audio/mpeg">
+                    <source src="audios/copy_detection/yi_122_gen.wav" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
             </div>
             <div class="pair">
-                <img src="1.png" alt="Image 2">
+                <img src="images/yi_377_gen.png" alt="Image 2">
                 <audio controls>
-                    <source src="audios/dcase7/129.wav" type="audio/mpeg">
+                    <source src="audios/copy_detection/yi_377_gen.wav" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
             </div>
             <div class="pair">
-                <img src="1.png" alt="Image 3">
+                <img src="images/yi_486_gen.png" alt="Image 3">
                 <audio controls>
-                    <source src="audios/dcase7/129.wav" type="audio/mpeg">
+                    <source src="audios/copy_detection/yi_486_gen.wav" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
             </div>
@@ -303,23 +303,23 @@
         <div class="row">
             <h4 id="evaluation results" style="text-align: left;">Top-1 matches from training samples</h4>
             <div class="pair">
-                <img src="1.png" alt="Image 1">
+                <img src="images/yi_122_train.png" alt="Image 1">
                 <audio controls>
-                    <source src="audios/dcase7/129.wav" type="audio/mpeg">
+                    <source src="audios/copy_detection/yi_122_train.wav" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
             </div>
             <div class="pair">
-                <img src="1.png" alt="Image 2">
+                <img src="images/yi_377_train.png" alt="Image 2">
                 <audio controls>
-                    <source src="audios/dcase7/129.wav" type="audio/mpeg">
+                    <source src="audios/copy_detection/yi_377_train.wav" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
             </div>
             <div class="pair">
-                <img src="1.png" alt="Image 3">
+                <img src="images/yi_486_train.png" alt="Image 3">
                 <audio controls>
-                    <source src="audios/dcase7/129.wav" type="audio/mpeg">
+                    <source src="audios/copy_detection/yi_486_train.wav" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
             </div>
@@ -333,23 +333,23 @@
         <div class="row">
             <h4 id="evaluation results" style="text-align: left;">Generated audio samples</h4>
             <div class="pair">
-                <img src="1.png" alt="Image 1">
+                <img src="images/jung_41_gen.png" alt="Image 1">
                 <audio controls>
-                    <source src="audios/dcase7/129.wav" type="audio/mpeg">
+                    <source src="audios/copy_detection/jung_41_gen.wav" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
             </div>
             <div class="pair">
-                <img src="1.png" alt="Image 2">
+                <img src="images/jung_387_gen.png" alt="Image 2">
                 <audio controls>
-                    <source src="audios/dcase7/129.wav" type="audio/mpeg">
+                    <source src="audios/copy_detection/jung_387_gen.wav" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
             </div>
             <div class="pair">
-                <img src="1.png" alt="Image 3">
+                <img src="images/jung_580_gen.png" alt="Image 3">
                 <audio controls>
-                    <source src="audios/dcase7/129.wav" type="audio/mpeg">
+                    <source src="audios/copy_detection/jung_580_gen.wav" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
             </div>
@@ -358,52 +358,29 @@
         <div class="row">
             <h4 id="evaluation results" style="text-align: left;">Top-1 matches from training samples</h4>
             <div class="pair">
-                <img src="1.png" alt="Image 1">
+                <img src="images/jung_41_train.png" alt="Image 1">
                 <audio controls>
-                    <source src="audios/dcase7/129.wav" type="audio/mpeg">
+                    <source src="audios/copy_detection/jung_41_train.wav" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
             </div>
             <div class="pair">
-                <img src="1.png" alt="Image 2">
+                <img src="images/jung_387_train.png" alt="Image 2">
                 <audio controls>
-                    <source src="audios/dcase7/129.wav" type="audio/mpeg">
+                    <source src="audios/copy_detection/jung_387_train.wav" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
             </div>
             <div class="pair">
-                <img src="1.png" alt="Image 3">
+                <img src="images/jung_580_train.png" alt="Image 3">
                 <audio controls>
-                    <source src="audios/dcase7/129.wav" type="audio/mpeg">
+                    <source src="audios//copy_detection/jung_580_train.wav" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
             </div>
         </div>
                     
 </div>
-<!-- <div class="row">
-	<div class="pair">
-		<img src="image4.jpg" alt="Image 4">
-		<audio controls>
-			<source src="audio4.mp3" type="audio/mpeg">
-			Your browser does not support the audio element.
-		</audio>
-	</div>
-	<div class="pair">
-		<img src="image5.jpg" alt="Image 5">
-		<audio controls>
-			<source src="audio5.mp3" type="audio/mpeg">
-			Your browser does not support the audio element.
-		</audio>
-	</div>
-	<div class="pair">
-		<img src="image6.jpg" alt="Image 6">
-		<audio controls>
-			<source src="audio6.mp3" type="audio/mpeg">
-			Your browser does not support the audio element.
-		</audio>
-	</div>
-</div> -->
 
 <!-- Add more rows as needed -->
 </body>
